src/test/ui/parser/issue-62546.stderr
error: this file contains an unclosed delimiter
  --> $DIR/issue-62546.rs:3:52
   |
LL | pub t(#
   |      - unclosed delimiter
LL |
LL |
   |                                                    ^

error: missing `fn` or `struct` for function or struct definition
  --> $DIR/issue-62546.rs:1:4
   |
LL | pub t(#
   | ---^- help: if you meant to call a macro, try: `t!`

error: aborting due to 2 previous errors

